# sysop

./: finalize.sh  finalize.sh~
DROPCAN/: client.c  makefile  server.c
cw06/zad1/: makefile  zad1.c
cw06/zad2/: generator.c  makefile  tester.c
cw06/zad3/: dodaj_plik.c  policz.c
cw06/zad4/: makefile
cw07/zad1/: client.c  server.c
cw07/zad1a/: client.c  defs.h  server.c
cw07/zad1b/: client.c  defs.h  makefile  makefile~  server.c
cw07/zad2a/: client.c  defs.h  makefile  server.c
cw07/zad2b/: client.c  defs.h  server.c
cw07/zad2c/: client.c  defs.h  (+3 more)
lab02/: README  makefile~  memlib  memlib.c
lab02/bak/zad2 (kolejna kopia)/: Makefile.in  configure  configure.ac  configure.scan~  testy
lab02/bak/zad2 (kolejna kopia)/.deps/: test.Po
lab02/bak/zad2 (kolejna kopia)/autom4te.cache/: output.0
lab02/bak/zad2 (kolejna kopia)/lib/: Makefile.am~
lab02/bak/zad2 (kolejna kopia)/src/: Makefile  Makefile.am~  Makefile.in  libmatrix.la  makefile  makefile.am~
lab03/: mand.txt
proj23/: dokumentacja.html  macros.h
ref12/: pytania-nonGIFT.txt  pytania.txt  ref12.html
ref14/: client.c  makefile  pytania.txt  pytania.txt~  pytaniaNonGIFT.txt~  pytaniaReadable.txt  ref14.html  ref14.html~  server.c  sokety.html
zad1/: b  makefile  makefile~  wyniki.txt  wyniki.txt~  zad1a.c  zad1a.c~  zad1a.out  zad1a_march.out  zad1a_opt_march.out  zad1b.c~  zad1b_march.out  zad1b_opt_march.out  zad1c.c~  zad1c.out  zad1c_march.out  zad1c_opt.out  zad1d.c~  zad1d_march.out  zad1d_opt_march.out
zad2/: fib.c  fib.c~  petla.c
zad3/: makefile  makefile~  wynik
zad3 automake/: README  config.h  config.status  configure  configure.ac
zad3 automake/autom4te.cache/: output.0  output.2
zad3 automake/src/: Makefile.am  main.c
zad3 automake/src/.deps/: macierze-macierz.Po  macierze-main.Po
zad3 automake/src/include/: Makefile  Makefile.in  iloczyn.h  macierz.h.gch  pliki.h.gch  roznica.h  wypisz.h.gch
zad3 automake/src/operacje/: Makefile.in  iloczyn.c  roznica.c
zad3 automake/src/operacje/.deps/: liboperacje_a-iloczyn.Po  liboperacje_a-macierz.Po  liboperacje_a-suma.Po
zad3 automake/src/we_wy/: Makefile
zad3 automake/src/we_wy/.deps/: libwe_wy_a-wczytaj_konsola.Po  libwe_wy_a-wczytaj_plik.Po  libwe_wy_a-wypisz_plik.Po
(+365 files in other folders)
